--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "homepage": "https://github.com/kolem1/nodejs-simple-crud#readme",
   "devDependencies": {
+    "@types/dotenv": "^8.2.0",
     "@types/node": "^18.0.0",
     "@types/uuid": "^8.3.4",
     "@typescript-eslint/eslint-plugin": "^5.28.0",
@@ -36,6 +37,7 @@
     "typescript": "^4.7.4"
   },
   "dependencies": {
+    "dotenv": "^16.0.1",
     "uuid": "^8.3.2"
   }
 }
